# FastTD3

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  fast_td3_mujoco  fast_td3_pytorch  fast_td3_simple  setup_pytorch.sh
.github/workflows/: badges.yml  ci.yml
docs/: MUJOCO_INTEGRATION.md
examples/: humanoid_training.sh  simple_training.sh
include/: config.hpp  networks.hpp  normalizers.hpp  normalizers_simple.hpp  replay_buffer.hpp  utils.hpp  utils_simple.hpp
include/pytorch/: mujoco_env.hpp
include/simple/: replay_buffer_simple.hpp
scripts/: verify_setup.sh
src/: CMakeLists.txt  config.cpp  main.cpp  main_simple.cpp  networks.cpp  replay_buffer.cpp  utils.cpp  utils_simple.cpp
src/core/: config.cpp
src/pytorch/: main.cpp  main_mujoco.cpp  mujoco_env.cpp  normalizers.cpp  replay_buffer.cpp
src/simple/: main_simple.cpp  normalizers_simple.cpp  replay_buffer_simple.cpp
tests/: CMakeLists.txt  test_simple.cpp
tests/scripts/: test_mujoco_integration.sh
